add: fix project bugs, add more tests, fix tests and increase doc