@@ -7,13 +7,12 @@ import org.modelmapper.ModelMapper;
 import org.modelmapper.PropertyMap;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 public class UserMapper {
 
-     public static User toUsuario(UserCreateDto createDto) {
-         return new ModelMapper().map(createDto, User.class);
-     }
+    public static User toUser(UserCreateDto createDto) {
+        return new ModelMapper().map(createDto, User.class);
+    }
 
     public static UserResponseDto toDto(User user) {
         String role = user.getRole().name().substring("ROLE_".length());
@@ -23,14 +22,12 @@ public class UserMapper {
                 map().setRole(role);
             }
         };
-
         ModelMapper mapper = new ModelMapper();
         mapper.addMappings(props);
-
         return mapper.map(user, UserResponseDto.class);
     }
 
-    public static List<UserResponseDto> toListDto(List<User> users) {
-         return users.stream().map(user -> toDto(user)).collect(Collectors.toList());
+    public static List<UserResponseDto> toListDto(List<User> Users) {
+        return Users.stream().map(UserMapper::toDto).toList();
     }
 }
